# isolated-pymcp

./: .coveragerc  .dir-locals.el  .envrc.example  .flake8  .gitattributes  .gitignore  .gitmessage  .mcp.json  AGENTS.md  CLAUDE.md  CLAUDE_SETUP.org  Dockerfile  Makefile  README.md  README.org  SECURITY.md  SETUP.org  SETUP_NOTES.md  TEST_PLAN.md  architecture.mmd  check-all-commands.sh  claude-worktree  dev-setup.org  docker-compose.yml  env-setup.org  github_issue_pydantic_mcp.md  inline_script_metadata.py  integrations.org  issue_coverage.md  mcp_client.py  mcp_run_python.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  run_factorial.py  setup_secrets.sh  update-command-titles.sh  update-shebangs.sh
.beads/: config.yaml  interactions.jsonl
.claude/: README.md  command-config.json  create-symlinks.sh  install-commands.sh  pr-review-config.json  preferences.json  settings.local.json
.claude/.cache/: repo-context.json
.claude/commands/: check-category.md  check-filename-consistency.md  check-rule.md  code:analyze.md  code:diagram.md  code:doc.md  code:hotspots.md  code:optimize.md  code:review.md  code:security.md  code:test.md  code:visualize.md  delete-worktree.md  fix-github-issue.md  issue-triage-prompt.md  issue-triage.md  labels.md  lint-code.md  lint.sh  list-worktrees.md  mise-en-place.md  new-worktree.md  security-review-full.md  security-review.md  switch-worktree.md  user:check-filename-consistency.md  user:doc-align.md  user:generate-docs.md  user:issue-triage.md  user:lint-fix.md  user:mise-en-place.md  (+5 more)
.devcontainer/: devcontainer.json
algorithms/: __init__.py  factorial.py  fibonacci.py  primes.py
config/: multilspy_config.py  personas.yaml
diagrams/: architecture.mmd  integration_flow.mmd  security_model.mmd
docs/: LABELS.md  PR_REVIEW_PROCESS.md  REQUIREMENTS.md  STAKEHOLDER_BRIEF.md  TUTORIAL_COMPARISON.md  WORKTREE_USAGE.md  dependency-types.md  fifo-infrastructure.md  git-hooks.md
emacs/: isolated-pymcp.el  mcp-helpers.el
scripts/: analyze-with-claude.sh  benchmark.sh  check-mcp-setup.sh  claude-commands-setup.sh  claude-delete-worktree.sh  claude-list-worktrees.sh  claude-new-worktree.sh  claude-switch-worktree.sh  claude-worktree-status.sh  claude-worktree.sh  cleanup.sh  dep-analysis.sh  get-secrets.sh  initialize-worktrees.sh  inline_script_metadata.py  install-mcp-servers-local.sh  install-mcp-servers.sh  mcp-python-test.sh  mcp-xml-wrapper.sh  mcp_client.py  mcp_run_python.py  mcp_simple_example.py  persona-filter.sh  review-pr.sh  run_factorial.py  run_python_code  run_python_code.py  setup-secrets.sh  setup.sh  setup_secrets.sh  start-mcp-servers.sh  start-pydantic-mcp.sh  tangle-setup.sh  test-pydantic-mcp.sh  update-mcp-servers.sh
tests/: __init__.py  send_payload.sh  test_factorial.py  test_fibonacci.py  test_fuzz.py  test_invariants.py  test_primes.py  test_property_based.py
(+159 files in other folders)
