[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "isolated-pymcp"
version = "0.1.0"
description = "A secure, isolated environment for Python development with MCP and LSP"
authors = [
    {name = "Aidan Pace", email = "apace@defrecord.com"}
]
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent"
]
dependencies = [
    "python-lsp-server>=1.12.2",
]

[project.urls]
"Homepage" = "https://github.com/aygp-dr/isolated-pymcp"
"Bug Tracker" = "https://github.com/aygp-dr/isolated-pymcp/issues"

[tool.setuptools.packages.find]
include = ["algorithms"]
exclude = ["data", "emacs", "config", "diagrams", "tutorials", "node_modules", ".venv", "docs", ".claude", ".vscode"]

[tool.setuptools]
include-package-data = true

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--cov=algorithms --cov-report=term --cov-report=xml"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "hypothesis>=6.99.0",
    "black>=24.0.0",
    "isort>=5.12.0",
    "mypy>=1.7.0",
    "flake8>=6.1.0",
]
